--- a/style.css
+++ b/style.css
@@ -1,31 +1,160 @@
 body {
-    margin: auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    flex: 1;
     background-color: #1f2937;
-    padding: 0px 250px 0px 250px;
+    color: #f9faf9;
+    padding: 20px 400px 20px 400px;
 }
 
 .logo {
-    display: flex;
-    align-items: center;
     font-size: 24px;
-    color: #F9FAF8;
-    font-weight: 900;
+    font-weight: 800;
 }
 
-a {
-    text-decoration: none;
-    color: #e5e7eb;
-    font-size: 18px;
-}
-
-ul {
+.header-links {
     display: flex;
     gap: 15px;
-    list-style: none;
+}
+
+.hero {
+    display: flex;
+    align-items: center;
+    background-color: #1f2937;
+    color: #f9faf9;
+    padding: 100px 400px 100px 400px;
+    justify-content: space-between;
+}
+
+.hero-left {
+    flex: 1;
+    height: 200px;
+}
+
+.hero-maintext {
+    font-size: 48px;
+    font-weight: 800;
+}
+
+.hero-subtext {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.hero-right {
+    display: flex;
+    background-color: gray;
+    flex: 1;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+.sign-up1 {
+    border-radius: 15px;
+    background-color: #3882f6; 
+    padding: 5px 20px 5px 20px;
+    color: #f9faf9;
+    border-color: #3882f6;
+}
+
+.info-header {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 800;
+    color: #1f2937;
+    padding: 40px 400px 40px 400px;
+}
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.info-tile {
+    width: 200px;
+    height: 200px;
+    border-style: solid;
+    border-color: #3882f6;
+    border-radius: 15px;
+}
+
+.infotext-container {
+    display: flex;
+    justify-content: center;
+    gap: 55px;
+}
+
+.infotext {
+    text-align: center;
+    width: 200px;
+    height: 100px;
+    padding-top: 15px;
+}
+
+.quote-container {
+    background-color: #e5e7eb;
+    padding: 40px 400px 40px 400px;
+}
+
+.quote-text {
+    padding: 50px;
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+}
+
+.quoter {
+    padding-right: 50px;
+    padding-bottom: 50px;
+    text-align: right;
+    font-size: 30px;
+    font-weight: 800;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 400px 100px 400px;
+}
+
+.cta-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 300px;
+    background-color: #3882f6;
+    width: 100%;
+    padding: 40px;
+    border-radius: 15px;
+    color: #f9faf9;
+}
+
+.cta-header {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.sign-up2 {
+    border-style: solid;
+    border-color: #f9faf9;
+    border-radius: 15px;
+    padding: 10px 40px 10px 40px;
+    background-color: #3882f6;
+    color: #f9faf9;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1f2937;
+    color: #f9faf9;
+    padding: 20px 400px 20px 400px;
 }
